# TG-Player-bot

./: README.md  description.txt  main.py  models.py  pyproject.toml
db/: base.db  schemas.py
handlers/: add_playlist.py  add_song.py  add_track.py  delete_playlist.py  delete_song.py  show_all_playlists.py  show_all_songs.py  show_playlists_songs.py
